// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestView when status scan <Completed> and supportsIssueFiling=false 1`] = `
<div>
  <HeaderSection
    description={
      <p>
        some description
      </p>
    }
    title="some title"
  />
  <stubInstancesSectionComponent
    cardsViewData={
      {
        "visualHelperEnabled": true,
      }
    }
    cardsViewStoreData={
      {
        "isIssueFilingSettingsDialogOpen": false,
      }
    }
    deps={
      {
        "cardInteractionSupport": {
          "supportsIssueFiling": false,
        },
        "cardsViewController": [typemoq mock object],
        "issueFilingDialogPropsFactory": [Function],
      }
    }
    narrowModeStatus={{}}
    scanMetadata={
      {
        "timespan": {
          "scanComplete": 1900-02-02T03:04:00.000Z,
        },
      }
    }
    sectionHeadingLevel={2}
    shouldAlertFailuresCount={true}
    tabStopsEnabled={true}
    userConfigurationStoreData={
      {
        "isFirstTime": false,
      }
    }
  />
</div>
`;

exports[`TestView when status scan <Completed> and supportsIssueFiling=true 1`] = `
<div>
  <HeaderSection
    description={
      <p>
        some description
      </p>
    }
    title="some title"
  />
  <stubInstancesSectionComponent
    cardsViewData={
      {
        "visualHelperEnabled": true,
      }
    }
    cardsViewStoreData={
      {
        "isIssueFilingSettingsDialogOpen": false,
      }
    }
    deps={
      {
        "cardInteractionSupport": {
          "supportsIssueFiling": true,
        },
        "cardsViewController": [typemoq mock object],
        "issueFilingDialogPropsFactory": [Function],
      }
    }
    narrowModeStatus={{}}
    scanMetadata={
      {
        "timespan": {
          "scanComplete": 1900-02-02T03:04:00.000Z,
        },
      }
    }
    sectionHeadingLevel={2}
    shouldAlertFailuresCount={true}
    tabStopsEnabled={true}
    userConfigurationStoreData={
      {
        "isFirstTime": false,
      }
    }
  />
  <IssueFilingDialog
    isOpen={false}
  />
</div>
`;

exports[`TestView when status scan <Failed> 1`] = `
<div>
  <HeaderSection
    description={
      <p>
        some description
      </p>
    }
    title="some title"
  />
  <ScanningSpinner
    aria-live="assertive"
    isSpinning={false}
    label="Scanning..."
  />
</div>
`;

exports[`TestView when status scan <Scanning> 1`] = `
<div>
  <HeaderSection
    description={
      <p>
        some description
      </p>
    }
    title="some title"
  />
  <ScanningSpinner
    aria-live="assertive"
    isSpinning={true}
    label="Scanning..."
  />
</div>
`;

exports[`TestView when status scan <undefined> 1`] = `
<div>
  <HeaderSection
    description={
      <p>
        some description
      </p>
    }
    title="some title"
  />
  <ScanningSpinner
    aria-live="assertive"
    isSpinning={false}
    label="Scanning..."
  />
</div>
`;
